fix width on mobile

--- a/themes/calmversation/sass/_front-page.scss
+++ b/themes/calmversation/sass/_front-page.scss
@@ -74,6 +74,10 @@
   }
 }
 
+.founder-button-container{
+  padding: 25px 0;
+}
+
 .solutions-container {
   .solution-text-desktop {
     display: none;
@@ -138,7 +142,6 @@
   margin: 15px 0;
   @include flex(row wrap, center, center);
   width: 110%;
-
   h2 {
     margin-left: 10px;
     width: 60%;
